# app/Application/Auth/DTOs/Request/LoginDTO.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Application\Auth\DTOs\Request;
+
+class LoginDTO
+{
+    public function __construct(
+        public readonly string $email,
+        public readonly string $password,
+    ) {}
+
+    public static function fromArray(array $data): self
+    {
+        return new self(
+            email: $data['email'],
+            password: $data['password'],
+        );
+    }
+}
