# app/Application/Auth/DTOs/Response/AuthTokenDTO.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Application\Auth\DTOs\Response;
+
+use App\Application\User\DTOs\Response\UserDTO;
+
+class AuthTokenDTO
+{
+    public function __construct(
+        public readonly string $token,
+        public readonly string $tokenType,
+        public readonly UserDTO $user,
+    ) {}
+}
